<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/templateEventName"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tempateEventDescription"
                android:textColor="?android:attr/textColorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/templateDate"
                    android:textColor="?android:attr/textColorPrimary"
                    app:drawableStartCompat="@drawable/baseline_event_24"
                    app:drawableTint="?android:attr/colorPrimary" />

                <ImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/odstraneni_udalosti"
                    android:src="@drawable/baseline_schedule_24"

                    app:tint="?attr/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:contentDescription="@string/odstraneni_udalosti"
            android:src="@drawable/baseline_delete_outline_24"
            app:tint="?attr/colorPrimary" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
